--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
-    <string name="app_name">List Of Restaurant</string>
+    <string name="app_name">Restaurants</string>
     <string name="loading">Loading</string>
+    <string name="name">Rachmad Alif Firdaus</string>
 </resources>
